fixed link overflow issue/ fixed via word break

--- a/index.css
+++ b/index.css
@@ -65,7 +65,6 @@ button:hover {
 ul {
     list-style: none;
     padding-left: 0;
-    margin-top: 5px;
     max-width: 400px;
 }
 
@@ -83,6 +82,7 @@ li a {
     margin-left: 40px;
     font-weight: 400;
     max-width: fit-content;
+    word-break: break-all;
 }
 
 li a:hover {
@@ -200,7 +200,7 @@ li a:hover {
     font-size: 1rem;
     padding: 10px 0;
     padding-right: 25px;
-    background: none;
+    background: transparent;
     color: #9559ba;
 }
 
